# hspec-need-env

./: .gitignore  .travis.yml  ChangeLog.md  README.md  hspec-need-env.cabal
.github/workflows/: haskell.yml
freezes/: 20220513-ghc-8.10.7.freeze  20220923-ghc-9.2.1.freeze  20240911-ghc-8.8.4.freeze
src/Test/Hspec/: NeedEnv.hs
test/: Synopsis.hs
test/Test/Hspec/: NeedEnvSpec.hs
