name:                   hspec-need-env
version:                0.1.0.10
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               Read environment variables for hspec tests
description:            Read environment variables for hspec tests. See 'Test.Hspec.NeedEnv'.
category:               Test
cabal-version:          >= 2.0
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md
homepage:               https://github.com/debug-ito/hspec-need-env
bug-reports:            https://github.com/debug-ito/hspec-need-env/issues

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  -- default-extensions:   
  -- other-extensions:     
  exposed-modules:      Test.Hspec.NeedEnv
  -- other-modules:        
  build-depends:        base,
                        hspec-expectations,
                        hspec-core

-- executable hspec-need-env
--   default-language:     Haskell2010
--   hs-source-dirs:       app
--   main-is:              Main.hs
--   ghc-options:          -Wall -fno-warn-unused-imports
--   -- other-modules:        
--   -- default-extensions:   
--   -- other-extensions:     
--   build-depends:        base

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              Spec.hs
  -- default-extensions:   
  other-extensions:     CPP
  other-modules:        Test.Hspec.NeedEnvSpec,
                        Synopsis
  build-tool-depends:   hspec-discover:hspec-discover
  build-depends:        base, hspec-need-env, hspec-core,
                        hspec,
                        setenv,
                        transformers

source-repository head
  type:                 git
  location:             https://github.com/debug-ito/hspec-need-env.git
